--- a/llvm-demo.cabal
+++ b/llvm-demo.cabal
@@ -23,6 +23,7 @@ executable llvm-demo
   build-depends:       base >=4.12 && <4.13,
                        llvm-hs,
                        llvm-hs-pretty,
-                       llvm-hs-pure
+                       llvm-hs-pure,
+                       text
   hs-source-dirs:      src
   default-language:    Haskell2010
